--- a/ios/podfile
+++ b/ios/podfile
@@ -7,4 +7,6 @@ target 'TestRN' do
   'RCTText',
   'RCTWebSocket'
   ]
+pod 'react-native-sqlite-storage', :path => '../node_modules/react-native-sqlite-storage'
+
 end
